...
                        localQuery = ""
                        onQueryChange("")
                    }
                ) {
                    Icon(
                        imageVector = Icons.Default.Clear,
                        contentDescription = "Clear search",
                        tint = TextSearchPlaceholder
                    )
                }
            }
        },
        modifier = modifier
...
